update the nav, officers to about

--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,9 @@ a.foot-links:hover{
     transform: scale(1.1);
 }
 
+.gallery-img-bd{
+    border: solid white;
+}
 
 /*--------------------------------------------------------------
 # Page header
